    and remote.name.annex-cluster-node and annex.cluster.name configuration.
  * Fix a bug where interrupting git-annex while it is updating the
    git-annex branch for an export could later lead to git fsck
    complaining about missing tree objects.
  * Tab completion of options like --from now includes special remotes,
    as well as proxied remotes and clusters.
  * Fix Windows build with Win32 2.13.4+
    Thanks, Oleg Tolmatcev

 -- Joey Hess <id@joeyh.name>  Mon, 03 Jun 2024 13:03:21 -0400

git-annex (10.20240531) upstream; urgency=medium

  * git-remote-annex: New program which allows pushing a git repo to a
    git-annex special remote, and cloning from a special remote.
    (Based on Michael Hanke's git-remote-datalad-annex.)
  * initremote, enableremote: Added --with-url to enable using
    git-remote-annex.
  * When building an adjusted unlocked branch, make pointer files
    executable when the annex object file is executable.
  * group: Added --list option.
  * fsck: Fix recent reversion that made it say it was checksumming files
    whose content is not present.
  * Avoid the --fast option preventing checksumming in some cases it
    was not supposed to.
  * testremote: Really fsck downloaded objects.
  * Typo fixes.
    Thanks, Yaroslav Halchenko

 -- Joey Hess <id@joeyh.name>  Fri, 31 May 2024 12:32:29 -0400

git-annex (10.20240430) upstream; urgency=medium

  * Bug fix: While redundant concurrent transfers were already
    prevented in most cases, it failed to prevent the case where
    two different repositories were sending the same content to
    the same repository.
  * addurl, importfeed: Added --verifiable option, which improves
    the safety of --fast or --relaxed by letting the content of
    annexed files be verified with a checksum that is calculated
    on a later download from the web. This will become the default later.
  * Added rclone special remote, which can be used without needing