@@ -52,8 +52,6 @@ For June's work on [[design/passthrough_proxy]], implementation plan:
 
 * Tab complete proxied remotes and clusters in eg --from option. (done)
 
-* Basic proxying to special remote support (non-streaming).
-
 * Getting a key from a cluster should proxy from one of the nodes that has
   it. (done)
 
@@ -63,7 +61,10 @@ For June's work on [[design/passthrough_proxy]], implementation plan:
   other git-annex processes are currently using.
 
 * Implement upload with fanout and reporting back additional UUIDs over P2P
-  protocol.
+  protocol. (started, but incomplete)
+
+* On upload to cluster, send to nodes where it's preferred content, and not
+  to other nodes.
 
 * Implement cluster drops, trying to remove from all nodes, and returning
   which UUIDs it was dropped from. 
@@ -86,6 +87,8 @@ For June's work on [[design/passthrough_proxy]], implementation plan:
   (But not when preferred content is not configured.)
   And on download from a cluster, if the proxy repository has the content,
   get it from there to avoid the overhead of proxying to a node.
+
+* Basic proxying to special remote support (non-streaming).
 
 * Support proxies-of-proxies better, eg foo-bar-baz.
   Currently, it does work, but have to run `git-annex updateproxy`
